--- a/CSS/global/styles.css
+++ b/CSS/global/styles.css
@@ -93,12 +93,9 @@ header:hover {
 }
 
 .main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: min(90%, 1140px);
+    width: min(var(--wrapper-width), var(--wrapper-max-width));
     margin: auto;
-    min-height: 6.25rem;
+    position: relative;
     z-index: 10;
 }
 
@@ -139,71 +136,67 @@ header:hover {
     box-shadow: 0 0 1rem var(--clr-neutral-3);
 }
 
+.main-nav__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 6.25rem;
+}
+
 .main-nav__list {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
-    padding: 1.5rem 0.25rem;
-    z-index: 1;
+    gap: 0.25rem;
 }
 
-.main-nav__list>* {
-    padding: 0.25rem 0.5rem;
-    border: var(--border-thickness-1) double var(--clr-neutral-2);
+.main-nav__list-item {
+    padding: 0.5em;
     border-radius: 50%;
     transition: var(--transition-time-1);
     cursor: pointer;
 }
 
-.main-nav__list>*:hover {
-    box-shadow: 0 0 1rem var(--clr-neutral-2);
-    border-style: solid;
-}
-
-.main-nav__list i {
-    float: left;
-    color: var(--clr-neutral-4);
-    margin: 0.125rem 0.25rem 0.125rem 0;
-    font-size: 1rem;
-    transition: var(--transition-time-1);
-}
-
-.main-nav__list a {
-    font-family: var(--font-2);
+.main-nav__link {
+    font-family: var(--font-1);
     font-weight: bold;
     transition: var(--transition-time-1);
 }
 
-.main-nav__list>*:hover a {
+.main-nav__icon {
+    float: left;
     color: var(--clr-neutral-4);
-    font-size: 1.25rem;
-}
-
-.main-nav__list .plans {
-    color: var(--clr-neutral-3);
-    border: var(--border-thickness-1) solid var(--clr-neutral-3);
-    box-shadow: 0 0 1rem var(--clr-neutral-3);
+    margin-right: 0.25rem;
     transition: var(--transition-time-1);
 }
 
-.main-nav__list .plans:hover {
-    box-shadow: 0 0 1.25rem var(--clr-neutral-3);
-    border-color: var(--clr-neutral-3);
+.main-nav__list-item:hover {
+    transform: scale(1.05);
 }
 
-.main-nav__list .plans a {
+.main-nav__list-item:hover .main-nav__link,
+.main-nav__list-item:hover .main-nav__icon {
+    color: var(--clr-neutral-3);
+}
+
+.main-nav__list-item--plans {
+    color: var(--clr-neutral-3);
+    transition: var(--transition-time-1);
+}
+
+.main-nav__link--plans {
     transition: var(--transition-time-1);
     color: var(--clr-neutral-3);
 }
 
-.main-nav__list .plans i {
+.main-nav__icon--plans {
     color: var(--clr-neutral-3);
 }
 
-.main-nav__list .plans:hover a,
-.main-nav__list .plans:hover i {
-    color: var(--clr-neutral-3);
+.main-nav__btn {
+    background-color: transparent;
+    color: var(--clr-neutral-4);
+    border: none;
 }
 
 .main-nav__hamburger-menu {
@@ -337,58 +330,6 @@ footer:hover {
     position: relative;
     z-index: 1;
     font-size: clamp(0.85rem, 3vw, 1rem);
-}
-
-/* ----------------------------------- */
-
-
-/* ---------- Media queries ---------- */
-
-@media (max-width: 50rem) {
-    .main-nav__hamburger-menu {
-        display: inline;
-    }
-
-    .main-nav__list {
-        position: absolute;
-        inset: 0;
-        visibility: hidden;
-        opacity: 0;
-        flex-direction: column;
-        gap: 2rem;
-        background: url('../../assets/imgs/coffee-beans.png');
-        background-color: var(--bg-dark-1);
-        width: 100%;
-        min-height: 100vh;
-        justify-content: center;
-        transition: var(--transition-time-1);
-    }
-
-    .main-nav__list::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        background-color: var(--bg-dark-3);
-        z-index: -1;
-    }
-
-    .main-nav__list.visible {
-        left: 0;
-        visibility: visible;
-        opacity: 1;
-        display: flex;
-    }
-
-    .main-nav__list li {
-        width: min(75%, 350px);
-        text-align: center;
-        border-radius: 0.625rem;
-        background-color: var(--bg-dark-2);
-    }
-
-    .main-nav__list i {
-        margin-right: 0;
-    }
 }
 
 /* ----------------------------------- */
