--- a/CSS/home.css
+++ b/CSS/home.css
@@ -6,15 +6,18 @@
 }
 
 .section-title {
-    font-size: clamp(1rem, 5vw, 1.8rem);
+    /* Fallbacks */
+    font-size: 1rem;
+
+    font-size: clamp(1rem, 0.7672413793103449rem + 1.3793103448275863vw, 1.75rem);
     padding-block: 1.5rem;
     text-align: center;
 }
 
 .slides {
-    /* Fallback for browsers that don't support svh */
+    /* Fallbacks */
     min-height: 100vh;
-    /* -------------------------------------------- */
+
     min-height: 100svh;
     position: relative;
 }
@@ -22,7 +25,7 @@
 .slide {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: inherit;
     opacity: 0;
     visibility: hidden;
     transition: var(--transition-time-2) ease;
@@ -62,23 +65,29 @@
     align-items: center;
     padding: 3rem 1.5rem;
     background-color: var(--bg-dark-3);
-    border-radius: 1.25rem;
+    border-radius: 20px;
     position: relative;
     width: min(var(--wrapper-width), var(--wrapper-max-width));
 }
 
 .slide-title {
-    text-shadow: 0 0 1rem var(--shadow-clr, var(--clr-neutral-2));
+    /* Fallbacks */
+    font-size: 1.5rem;
+
+    font-size: clamp(1.5rem, 1.1896551724137931rem + 1.839080459770115vw, 2.5rem);
+    text-shadow: 0 0 16px var(--shadow-clr, var(--clr-neutral-2));
     font-family: var(--font-2);
-    font-size: clamp(1.5rem, 5vw, 2.5rem);
-    margin-bottom: 0.25em;
+    margin-bottom: 1rem;
 }
 
 .slide-description {
+    /* Fallbacks */
+    font-size: 0.75rem;
+
+    font-size: clamp(0.75rem, 0.6336206896551724rem + 0.6896551724137931vw, 1.125rem);
     text-align: justify;
     letter-spacing: var(--letter-spacing);
     line-height: var(--line-height);
-    font-size: clamp(0.75rem, 3vw, 1.125rem);
 }
 
 .slider {
@@ -99,13 +108,13 @@
     align-items: center;
     background-color: var(--bg-dark-3);
     border: var(--border-thickness-1) solid var(--border-clr, var(--clr-neutral-3));
-    border-radius: 1.25rem;
+    border-radius: 20px;
     transition: var(--transition-time-1);
-    box-shadow: 0 0 0.625rem var(--shadow-clr, var(--clr-neutral-2));
+    box-shadow: 0 0 10px var(--shadow-clr, var(--clr-neutral-2));
 }
 
 .slide-indicators:hover {
-    box-shadow: 0 0 1rem var(--shadow-clr, var(--clr-neutral-3));
+    box-shadow: 0 0 16px var(--shadow-clr, var(--clr-neutral-3));
 }
 
 .slide-indicator {
@@ -134,25 +143,28 @@
     z-index: 1;
     margin-inline: auto;
     display: flex;
-    gap: 1.25rem;
+    gap: 20px;
 }
 
 .slide-options-btn {
+    /* Fallbacks */
+    font-size: 0.9375rem;
+
+    font-size: clamp(0.9375rem, 0.8405172413793104rem + 0.5747126436781609vw, 1.25rem);
     padding: 0.5em 1em;
     margin: 2rem auto 2rem;
-    border-radius: 2rem;
+    border-radius: 32px;
     border: var(--border-thickness-2) solid var(--border-clr, var(--clr-neutral-3));
-    box-shadow: 0 0 0.625rem var(--shadow-clr, var(--clr-neutral-3));
+    box-shadow: 0 0 10px var(--shadow-clr, var(--clr-neutral-3));
     background-color: var(--bg-dark-3);
     font-weight: bold;
-    font-size: clamp(1rem, 5vw, 1.25rem);
     color: var(--clr-neutral-1);
     transition: 0.3s ease;
     z-index: 0;
 }
 
 .slide-options-btn:hover {
-    box-shadow: 0 0 1rem var(--shadow-clr, var(--clr-neutral-3));
+    box-shadow: 0 0 16px var(--shadow-clr, var(--clr-neutral-3));
     transform: scale(1.03);
     color: var(--text-clr, var(--clr-neutral-3));
 }
@@ -186,14 +198,14 @@
     transform: translateY(-50%);
     padding: 2rem;
     overflow-y: scroll;
-    border-radius: 2rem;
-    backdrop-filter: blur(1rem);
+    border-radius: 32px;
+    backdrop-filter: blur(16px);
 }
 
 .modal-title {
     text-align: center;
     font-family: var(--font-2);
-    text-shadow: 0 0 1rem var(--shadow-clr, var(--clr-neutral-2));
+    text-shadow: 0 0 16px var(--shadow-clr, var(--clr-neutral-2));
     font-size: 2rem;
 }
 
@@ -202,7 +214,7 @@
     color: var(--clr-neutral-1);
     background-color: var(--bg-dark-1);
     border: var(--border-thickness-2) solid var(--clr-neutral-3);
-    border-radius: 0.75rem;
+    border-radius: 12px;
     padding: 0.25em 0.5em;
     font-size: 1rem;
     font-weight: bold;
@@ -216,10 +228,10 @@
 }
 
 .drink-content {
-    --gap: 2rem;
-    --h-offset: 0.75rem;
-    --v-offset: 0.75rem;
-    --b-radius: 1rem;
+    --gap: 32px;
+    --h-offset: 12px;
+    --v-offset: 12px;
+    --b-radius: 16px;
     --s-radius: 0;
 
     display: flex;
@@ -234,7 +246,7 @@
 }
 
 .drink-images img {
-    border-radius: 0.5rem;
+    border-radius: 8px;
     box-shadow: var(--h-offset) var(--v-offset) var(--b-radius) var(--s-radius) var(--bg-dark-3);
 }
 
@@ -272,7 +284,7 @@
 
 .drink-video video {
     width: 100%;
-    border-radius: 1rem;
+    border-radius: 16px;
     box-shadow: var(--h-offset) var(--v-offset) var(--b-radius) var(--s-radius) var(--bg-dark-3);
 }
 
@@ -334,7 +346,7 @@
     margin-block: 1.5rem;
     border-radius: 25px;
     background-color: var(--bg-dark-3);
-    box-shadow: 0.625rem 0.625rem 1.25rem var(--bg-dark-1);
+    box-shadow: 10px 10px 20px var(--bg-dark-1);
     position: relative;
     transition: var(--transition-time-1);
     cursor: pointer;
@@ -352,13 +364,13 @@
 }
 
 .drinks-list:hover {
-    backdrop-filter: blur(0.625rem);
+    backdrop-filter: blur(10px);
 }
 
 .drinks .drink-title {
     font-family: var(--font-2);
     font-size: 2rem;
-    text-shadow: 0 0 0.625rem var(--clr-neutral-3);
+    text-shadow: 0 0 10px var(--clr-neutral-3);
     position: absolute;
     z-index: 1;
     padding: 0.625rem 1rem;
@@ -425,39 +437,59 @@
 /* ------------- Plans --------------- */
 
 .plans-section {
-    /* Fallback for browsers that don't support svh */
+    /* Fallbacks */
     min-height: 100vh;
-    /* -------------------------------------------- */
+
     min-height: 100svh;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--bg-dark-4);
+    background: url('../assets/imgs/coffee-bg.jpg');
+    background-size: cover;
+    background-position: center;
+    border-top: var(--border-thickness-2) double var(--clr-neutral-2);
 }
 
 .plans-section__cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
     justify-items: center;
     align-items: center;
     width: 100%;
     max-width: var(--wrapper-max-width);
+    backdrop-filter: blur(16px);
+    padding: 3rem 0;
+    box-shadow: 0 0 32px var(--clr-neutral-6);
+    border-radius: 20px;
+    overflow: visible;
 }
 
 .plans-section__card {
+    /* Fallbacks */
+    font-size: 0.8125rem;
+
+    --h-offset: 8px;
+    --v-offset: 8px;
+    --b-radius: 16px;
+    --s-radius: 0;
+
+    font-size: clamp(0.8125rem, 0.7543103448275862rem + 0.3448275862068966vw, 1rem);
     position: relative;
-    border-radius: 1rem;
+    border-radius: 16px;
     padding: 1rem;
     min-height: 50vh;
     max-width: 300px;
-    transition: var(--transition-time-1) ease;
-    box-shadow: 0.5rem 0.5rem 1rem black;
+    transition: var(--transition-time-2) ease;
+    box-shadow: var(--h-offset) var(--v-offset) var(--b-radius) var(--s-radius) var(--box-shadow-clr, var(--clr-neutral-6));
+    grid-row: 1 / 2;
 }
 
 .plans-section__card:hover {
-    transform: scale(1.03);
+    --h-offset: 0;
+    --v-offset: 0;
+    --b-radius: 32px;
 }
 
 .plans-section__card:before {
@@ -494,7 +526,7 @@
     padding: 1rem 0;
     font-family: var(--font-2);
     font-size: 2rem;
-    text-shadow: 0 0 1rem var(--shadow-clr);
+    text-shadow: 0 0 16px var(--shadow-clr);
 }
 
 .plans-section__card-list {
@@ -522,21 +554,36 @@
 .plans-section__card--silver-plan {
     --shadow-clr: var(--clr-accent-4);
     --border-clr: var(--clr-accent-4);
+    grid-column: 1 / 3;
+}
+
+.plans-section__card--silver-plan:hover {
+    transform: translateX(-5rem) scale(1.15);
+    --box-shadow-clr: var(--clr-accent-4);
 }
 
 .plans-section__card--diamond-plan {
     --shadow-clr: var(--clr-accent-6);
     --border-clr: var(--clr-accent-6);
     transform: scale(1.1);
+    grid-column: 2 / 4;
+    z-index: 2;
 }
 
 .plans-section__card--diamond-plan:hover {
     transform: scale(1.13);
+    --box-shadow-clr: var(--clr-accent-6);
 }
 
 .plans-section__card--gold-plan {
     --shadow-clr: var(--clr-accent-5);
     --border-clr: var(--clr-accent-5);
+    grid-column: 3 / 5;
+}
+
+.plans-section__card--gold-plan:hover {
+    transform: translateX(5rem) scale(1.15);
+    --box-shadow-clr: var(--clr-accent-5);
 }
 
 .plans-section__card-btns {
@@ -545,7 +592,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.25rem;
+    gap: 4px;
     margin-top: 2rem;
 }
 
@@ -558,11 +605,11 @@
 }
 
 .plans-section__card-btn--dropdown {
-    border-radius: 1rem 0 0 1rem;
+    border-radius: 16px 0 0 16px;
 }
 
 .plans-section__card-btn--add-cart {
-    border-radius: 0 1rem 1rem 0;
+    border-radius: 0 16px 16px 0;
 }
 
 .plans-section__card-btn--silver-plan {
@@ -570,7 +617,7 @@
 }
 
 .plans-section__card-btn--silver-plan:hover {
-    box-shadow: 0 0 0.5rem var(--clr-accent-4);
+    box-shadow: 0 0 8px var(--clr-accent-4);
 }
 
 .plans-section__card-btn--diamond-plan {
@@ -578,7 +625,7 @@
 }
 
 .plans-section__card-btn--diamond-plan:hover {
-    box-shadow: 0 0 0.5rem var(--clr-accent-6);
+    box-shadow: 0 0 8px var(--clr-accent-6);
 }
 
 .plans-section__card-btn--gold-plan {
@@ -586,7 +633,7 @@
 }
 
 .plans-section__card-btn--gold-plan:hover {
-    box-shadow: 0 0 0.5rem var(--clr-accent-5);
+    box-shadow: 0 0 8px var(--clr-accent-5);
 }
 
 /* ----------------------------------- */
