--- a/CSS/global/media-queries.css
+++ b/CSS/global/media-queries.css
@@ -67,3 +67,38 @@
         opacity: 1;
     }
 }
+
+@media (min-width: 33.75rem) {
+    .plans-section__cards {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .plans-section__card {
+        grid-row: 1 / 2;
+    }
+
+    .plans-section__card--silver-plan {
+        grid-column: 1 / 3;
+    }
+
+    .plans-section__card--silver-plan:hover {
+        transform: scale(1.15) translateX(2rem);
+    }
+
+    .plans-section__card--diamond-plan {
+        transform: scale(1.1);
+        grid-column: 2 / 4;
+    }
+
+    .plans-section__card--diamond-plan:hover {
+        transform: scale(1.15);
+    }
+
+    .plans-section__card--gold-plan {
+        grid-column: 3 / 5;
+    }
+
+    .plans-section__card--gold-plan:hover {
+        transform: scale(1.15) translateX(-2rem);
+    }
+}
