--- a/CSS/home.css
+++ b/CSS/home.css
@@ -58,7 +58,7 @@
 }
 
 .slide-description-container {
-    margin: clamp(12rem, 40vw, 17rem) auto 0;
+    margin: clamp(10.9375rem, 9.482758620689655rem + 8.620689655172415vw, 15.625rem) auto 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -100,7 +100,7 @@
     line-height: var(--line-height);
     width: 100%;
     margin: 0;
-    padding: 8px 32px;
+    padding-inline: 32px;
     max-height: clamp(8rem, 20rem - 10vw, 20rem);
     overflow: hidden;
 }
@@ -110,7 +110,7 @@
     inset: 0 auto auto 50%;
     transform: translateX(-50%);
     z-index: 1;
-    margin: clamp(7rem, 25vw, 10rem) auto;
+    margin: clamp(6.25rem, 5.280172413793103rem + 5.747126436781609vw, 9.375rem) auto;
     width: max-content;
     display: flex;
     justify-content: center;
@@ -489,14 +489,14 @@
 
 .plans-section__cards {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
+    gap: 1rem;
     justify-items: center;
     align-items: center;
     width: 100%;
     max-width: var(--wrapper-max-width);
     backdrop-filter: blur(16px);
-    padding: 3rem 0;
+    padding-block: 3rem;
+    margin-top: 5.3125rem;
     box-shadow: 0 0 32px var(--clr-neutral-6);
     border-radius: 20px;
     overflow: visible;
@@ -504,8 +504,7 @@
 
 .plans-section__card {
     /* Fallbacks */
-    font-size: 0.8125rem;
-    min-height: 50vh;
+    font-size: 0.75rem;
 
     /* Custom properties */
     --h-offset: 8px;
@@ -513,15 +512,13 @@
     --b-radius: 16px;
     --s-radius: 0;
 
-    font-size: clamp(0.8125rem, 0.7543103448275862rem + 0.3448275862068966vw, 1rem);
+    font-size: clamp(0.75rem, 0.6724137931034483rem + 0.45977011494252873vw, 1rem);
     position: relative;
     border-radius: 16px;
-    padding: 1rem;
-    min-height: 50svh;
-    max-width: 300px;
+    padding: 15px;
+    max-width: clamp(15rem, 10.685344827586206rem + 11.494252873563218vw, 21.875rem);
     transition: var(--transition-time-2) ease;
     box-shadow: var(--h-offset) var(--v-offset) var(--b-radius) var(--s-radius) var(--box-shadow-clr, var(--clr-neutral-6));
-    grid-row: 1 / 2;
 }
 
 .plans-section__card:hover {
@@ -594,15 +591,14 @@
     /* Custom properties */
     --shadow-clr: var(--clr-accent-4);
     --border-clr: var(--clr-accent-4);
-
-    grid-column: 1 / 3;
 }
 
 .plans-section__card--silver-plan:hover {
     /* Custom properties */
     --box-shadow-clr: var(--clr-accent-4);
 
-    transform: translateX(-5rem) scale(1.15);
+    z-index: 3;
+    transform: scale(1.03);
 }
 
 .plans-section__card--diamond-plan {
@@ -610,8 +606,6 @@
     --shadow-clr: var(--clr-accent-6);
     --border-clr: var(--clr-accent-6);
 
-    transform: scale(1.1);
-    grid-column: 2 / 4;
     z-index: 2;
 }
 
@@ -619,22 +613,21 @@
     /* Custom properties */
     --box-shadow-clr: var(--clr-accent-6);
 
-    transform: scale(1.13);
+    transform: scale(1.03);
 }
 
 .plans-section__card--gold-plan {
     /* Custom properties */
     --shadow-clr: var(--clr-accent-5);
     --border-clr: var(--clr-accent-5);
-
-    grid-column: 3 / 5;
 }
 
 .plans-section__card--gold-plan:hover {
     /* Custom properties */
     --box-shadow-clr: var(--clr-accent-5);
 
-    transform: translateX(5rem) scale(1.15);
+    z-index: 3;
+    transform: scale(1.03);
 }
 
 .plans-section__card-btns {
@@ -648,9 +641,12 @@
 }
 
 .plans-section__card-btn {
+    /* Fallbacks */
+    font-size: 0.75rem;
+
+    font-size: clamp(0.75rem, 0.6724137931034483rem + 0.45977011494252873vw, 1rem);
     padding: 0.25em 0.5em;
     border: none;
-    font-size: 1rem;
     font-weight: bold;
     transition: var(--transition-time-1);
 }
