Improved hero section

--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -8,6 +8,7 @@
     --clr-neutral-6: hsl(0, 0%, 0%);
     --clr-neutral-7: hsla(25, 88%, 38%, 0.75);
     --clr-neutral-8: hsla(0, 0%, 100%, 0.75);
+    --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
@@ -42,6 +43,7 @@
     --border-thickness-1: 5px;
     --border-thickness-2: 3px;
     --border-thickness-3: 1px;
+    --border-thickness-4: 2px;
 
     --line-height: 1.5;
     --letter-spacing: 3px;
