--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -9,6 +9,7 @@
     --clr-neutral-7: hsla(25, 88%, 38%, 0.75);
     --clr-neutral-8: hsla(0, 0%, 100%, 0.75);
     --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
+    --clr-neutral-10: hsl(0, 0%, 87%);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
@@ -29,6 +30,7 @@
     --bg-dark-3: hsla(0, 0%, 0%, 0.498);
     --bg-dark-4: hsla(25, 75%, 47%, 0.204);
     --bg-dark-5: hsla(0, 0%, 0%, 0.749);
+    --bg-dark-6: hsla(0, 0%, 0%, 0.35);
     /* ----------------------------------- */
 
     /* -------------- Fonts -------------- */
