--- a/CSS/global/media-queries.css
+++ b/CSS/global/media-queries.css
@@ -1,4 +1,13 @@
 @media (max-width: 50rem) {
+    .main-nav__title {
+        /* Fallbacks */
+        font-size: 1.5rem;
+
+        font-size: clamp(1rem, 0.8448275862068966rem + 0.9195402298850575vw, 1.5rem);
+        visibility: visible;
+        transform: translateX(0) scaleX(1);
+    }
+
     .main-nav__hamburger-menu {
         display: inline;
     }
@@ -7,16 +16,17 @@
         /* Fallbacks */
         min-height: 100vh;
 
+        justify-content: center;
+        flex-direction: column;
+        gap: 0;
         min-height: 100svh;
         position: absolute;
-        z-index: 1;
         inset: 0;
-        visibility: hidden;
-        opacity: 0;
-        flex-direction: column;
+        z-index: 1;
         background: url('../../assets/imgs/coffee-beans.png');
         background-color: var(--bg-dark-1);
-        justify-content: center;
+        visibility: hidden;
+        opacity: 0;
         transition: var(--transition-time-1);
     }
 
@@ -24,30 +34,37 @@
         content: '';
         position: absolute;
         inset: 0;
-        background-color: var(--bg-dark-5);
         z-index: -1;
+        background-color: var(--bg-dark-5);
     }
 
     .main-nav__list.visible {
+        display: flex;
         left: 0;
         visibility: visible;
         opacity: 1;
-        display: flex;
     }
 
     .main-nav__list-item {
         width: min(75%, 21.875rem);
         text-align: center;
         border-top: var(--border-thickness-3) solid var(--clr-neutral-4);
+        padding: 10px 5px;
     }
 
     .main-nav__list-item:hover {
         border-top-color: var(--clr-neutral-3);
+        border-bottom-color: transparent;
     }
 
-    .main-nav__list-item--plans {
-        border-bottom: var(--border-thickness-3) solid;
-        border-color: var(--clr-neutral-3);
+    .main-nav__list-item:last-child {
+        border-bottom: var(--border-thickness-3) solid var(--clr-neutral-4);
+    }
+
+    .current {
+        border-top-color: var(--clr-neutral-3);
+        border-bottom-width: var(--border-thickness-3);
+        border-bottom-color: transparent;
     }
 
     .main-nav__list-icon {
