--- a/CSS/global/styles.css
+++ b/CSS/global/styles.css
@@ -27,7 +27,7 @@
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
-    background-color: transparent;
+    background-color: var(--bg-dark-3);
     border: var(--border-thickness-1) solid var(--border-clr, var(--clr-neutral-3));
     border-top-color: transparent;
     border-bottom-color: transparent;
@@ -78,7 +78,7 @@ header {
     backdrop-filter: blur(10px);
     background-color: var(--bg-dark-6);
     box-shadow: 0 0 50px 30px var(--bg-dark-2);
-    border-bottom: var(--border-thickness-3) solid rgb(80, 80, 80);
+    border-bottom: var(--border-thickness-3) solid var(--clr-neutral-10);
     transition: var(--transition-time-1);
 }
 
@@ -89,7 +89,7 @@ header:hover {
 
 .main-nav {
     margin: auto;
-    position: relative;
+
 }
 
 .main-nav__branding {
@@ -149,7 +149,7 @@ header:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 6.25rem;
+    min-height: 5.5rem;
     margin-inline: auto;
     width: min(var(--wrapper-width), var(--wrapper-max-width));
 }
