--- a/CSS/home.css
+++ b/CSS/home.css
@@ -128,7 +128,6 @@
 
     font-size: clamp(0.75rem, 0.7112068965517241rem + 0.22988505747126436vw, 0.875rem);
     text-shadow: 2px 2px 3px var(--bg-dark-1);
-    color: var(--clr-neutral-10);
     letter-spacing: var(--letter-spacing);
     line-height: var(--line-height);
     width: 100%;
@@ -152,6 +151,7 @@
     align-items: center;
     border: var(--border-thickness-1) solid var(--border-clr, var(--clr-neutral-3));
     border-radius: 20px;
+    background-color: var(--bg-dark-3);
     transition: var(--transition-time-1);
 }
 
