--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -31,6 +31,7 @@
     --bg-dark-4: hsla(25, 75%, 47%, 0.204);
     --bg-dark-5: hsla(0, 0%, 0%, 0.749);
     --bg-dark-6: hsla(0, 0%, 0%, 0.35);
+    --bg-dark-7: hsla(25, 75%, 47%, 0.11);
     /* ----------------------------------- */
 
     /* -------------- Fonts -------------- */
