Improved hamburger accessibility and design

--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -9,7 +9,7 @@
     --clr-neutral-7: hsla(25, 88%, 38%, 0.75);
     --clr-neutral-8: hsla(0, 0%, 100%, 0.75);
     --clr-neutral-9: hsla(25, 88%, 38%, 0.35);
-    --clr-neutral-10: hsl(0, 0%, 31%);
+    --clr-neutral-10: hsl(0, 0%, 30%);
     /* ----------------------------------- */
 
     /* --------- Special colors ---------- */
@@ -19,6 +19,7 @@
     --clr-accent-4: hsl(0, 0%, 75%);
     --clr-accent-5: hsl(43, 74%, 49%);
     --clr-accent-6: hsl(180, 100%, 50%);
+    --clr-accent-7: hsl(39, 100%, 50%);
 
     --clr-check: hsl(84, 100%, 59%);
     --clr-deny: hsl(0, 100%, 59%);
@@ -32,6 +33,7 @@
     --bg-dark-5: hsla(0, 0%, 0%, 0.749);
     --bg-dark-6: hsla(0, 0%, 0%, 0.35);
     --bg-dark-7: hsla(25, 75%, 47%, 0.11);
+    --bg-dark-8: hsla(28, 100%, 6%, 0.678);
     /* ----------------------------------- */
 
     /* -------------- Fonts -------------- */
