--- a/CSS/global/styles.css
+++ b/CSS/global/styles.css
@@ -176,7 +176,8 @@ header:hover {
     color: var(--clr-neutral-3);
 }
 
-.main-nav__list-item:hover {
+.main-nav__list-item:hover,
+.main-nav__list-item:focus-within {
     border-bottom-color: var(--clr-neutral-3);
 }
 
@@ -194,20 +195,24 @@ header:hover {
 }
 
 .main-nav__list-item:hover .main-nav__link,
-.main-nav__list-item:hover .main-nav__icon {
+.main-nav__list-item:hover .main-nav__icon,
+.main-nav__list-item:focus-within .main-nav__link,
+.main-nav__list-item:focus-within .main-nav__icon {
     color: var(--clr-neutral-3);
 }
 
 .main-nav__btn {
     background-color: transparent;
     color: var(--clr-neutral-4);
-    border: none;
+    border-color: transparent;
     transition: var(--transition-time-1);
     font-size: 1rem;
 }
 
-.main-nav__btn:hover {
+.main-nav__btn:hover,
+.main-nav__btn:focus {
     color: var(--clr-neutral-3);
+    border-bottom-color: var(--clr-neutral-3);
 }
 
 .main-nav__hamburger-menu {
@@ -273,19 +278,19 @@ footer:hover {
     align-items: center;
     position: relative;
     z-index: 2;
-    padding: 0.25rem;
-    margin: 0.625rem;
+    padding: 4px;
+    margin: 10px 0 0;
 }
 
 .footer-nav-list {
     /* Fallbacks */
-    font-size: 0.8125rem;
+    font-size: 0.75rem;
 
-    font-size: clamp(0.8125rem, 0.7543103448275862rem + 0.3448275862068966vw, 1rem);
+    font-size: clamp(0.75rem, 0.6724137931034483rem + 0.45977011494252873vw, 1rem);
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin: clamp(0rem, 2vw, 2rem);
+    margin: 0 clamp(4px, -4.689655172413794px + 3.218390804597701vw, 32px) 10px;
 }
 
 .footer-nav-list a {
@@ -303,17 +308,16 @@ footer:hover {
 }
 
 .social {
+    /* Fallbacks */
+    font-size: 0.875rem;
+
+    font-size: clamp(0.875rem, 0.7974137931034483rem + 0.45977011494252873vw, 1.125rem);
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     z-index: 1;
-    font-size: 1.25rem;
     margin-inline: 1rem;
-}
-
-.social .fa-apple {
-    font-size: 1.5rem;
 }
 
 .footer-nav-list li,
@@ -333,7 +337,7 @@ footer:hover {
 }
 
 .social li:nth-child(3) {
-    border-right: var(--border-thickness-2) solid var(--clr-neutral-2);
+    border-right: var(--border-thickness-4) solid var(--clr-neutral-2);
     padding-right: 0.625rem;
     margin-right: 0.25rem;
 }
